--- a/src/main/java/App/AppModificada.form
+++ b/src/main/java/App/AppModificada.form
@@ -50,10 +50,11 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace min="276" pref="276" max="-2" attributes="0"/>
-                  <Component id="Contenido" min="-2" pref="740" max="-2" attributes="0"/>
+                  <Component id="menu" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="Contenido" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
-              <Component id="menu" min="-2" max="-2" attributes="0"/>
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="262" max="-2" attributes="0"/>
                   <Component id="Barra" pref="780" max="32767" attributes="0"/>
@@ -62,12 +63,13 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="136" pref="136" max="-2" attributes="0"/>
-                  <Component id="Contenido" max="32767" attributes="0"/>
-              </Group>
               <Component id="menu" pref="652" max="32767" attributes="0"/>
-              <Component id="Barra" min="-2" pref="84" max="-2" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <Component id="Barra" min="-2" pref="84" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="Contenido" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -99,8 +101,8 @@
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
-                      <Component id="Icono" min="-2" pref="71" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
+                      <Component id="Icono" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -108,9 +110,9 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                      <Component id="Icono" min="-2" pref="71" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                      <Component id="Icono" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="Separador" min="-2" pref="31" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                       <Component id="EmpezarPartidaBoton" min="-2" pref="60" max="-2" attributes="0"/>
@@ -118,7 +120,7 @@
                       <Component id="VerPartidasTerminadasBoton" min="-2" pref="60" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="VerPartidasSinTerminarBoton" min="-2" pref="60" max="-2" attributes="0"/>
-                      <EmptySpace pref="175" max="32767" attributes="0"/>
+                      <EmptySpace pref="157" max="32767" attributes="0"/>
                       <Component id="SalirBoton" min="-2" pref="60" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -232,6 +234,11 @@
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="Icono">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/loro.png"/>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
@@ -249,11 +256,11 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                       <Component id="GitHubTexto" min="-2" pref="128" max="-2" attributes="0"/>
                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Component id="textoEjercicio" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="emailTexto" pref="299" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -261,15 +268,16 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="GitHubTexto" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="textoEjercicio" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="GitHubTexto" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="textoEjercicio" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="emailTexto" min="-2" pref="90" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="45" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="emailTexto" alignment="1" min="-2" pref="90" max="-2" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -281,6 +289,9 @@
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/github.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="marromagu"/>
                 <Property name="iconTextGap" type="int" value="10"/>
@@ -308,6 +319,9 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/gmail_1.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="mromagu2611@g.educaand.es"/>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
@@ -320,7 +334,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[758, 516]"/>
+              <Dimension value="[700, 500]"/>
             </Property>
           </Properties>
 
@@ -334,7 +348,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="texto" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="484" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
