--- a/src/main/java/Ventanas/Ventana_VerPartidaSinTerminar.form
+++ b/src/main/java/Ventanas/Ventana_VerPartidaSinTerminar.form
@@ -35,7 +35,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="SuTurno" pref="418" max="32767" attributes="0"/>
-                      <Component id="MiTurno" alignment="0" max="32767" attributes="0"/>
+                      <Component id="MiTurno" alignment="0" pref="418" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -44,11 +44,11 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
-                  <Component id="SuTurno" min="-2" pref="35" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                   <Component id="MiTurno" min="-2" pref="35" max="-2" attributes="0"/>
-                  <EmptySpace pref="80" max="32767" attributes="0"/>
+                  <EmptySpace pref="100" max="32767" attributes="0"/>
+                  <Component id="SuTurno" min="-2" pref="35" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
